--- a/WHMIS/Views/PocketGuide/_Checklist.xaml
+++ b/WHMIS/Views/PocketGuide/_Checklist.xaml
@@ -11,41 +11,47 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
-                        <Grid x:Name="checklistGrid" Margin="10" >
+                        <Grid x:Name="checklistGrid" Padding="5, 5, 5, 5">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-                            <CheckBox x:Name="checkBox" Grid.Row="0" Grid.Column="0"  CheckedChanged="OnCheckChanged"  IsChecked="{Binding IsChecked}"/>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <CheckBox x:Name="checkBox" Grid.Row="0" Grid.Column="0"  CheckedChanged="OnCheckChanged"  IsChecked="{Binding IsChecked}" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
 
 
                             <Label Text="{Binding Item}" Grid.Row="0" Grid.Column="1" VerticalOptions="CenterAndExpand"/>
 
-                            <Label x:Name="dateField" Text="{Binding Date, StringFormat='{0:MM dd, yyyy}'}" Grid.Row="1"  Grid.Column="0" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" WidthRequest="50">
-                                <Label.Triggers>
-                                    <DataTrigger TargetType="Label"
-                                            Binding="{Binding Source={x:Reference checkBox}, Path=IsChecked}" Value="True">
-                                        <Setter Property="IsVisible"  Value="True"/>
-                                    </DataTrigger>
-                                    <DataTrigger TargetType="Label"
-                                            Binding="{Binding Source={x:Reference checkBox}, Path=IsChecked}" Value="False">
-                                        <Setter Property="IsVisible"  Value="False"/>
-                                    </DataTrigger>
-                                </Label.Triggers>
-                            </Label>
+                            <StackLayout Grid.Row="1"  Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                                <Label x:Name="dateField" Text="{Binding Date, StringFormat='{0:MM dd, yyyy}'}"  VerticalOptions="Center">
+                                    <Label.Triggers>
+                                        <DataTrigger TargetType="Label"
+                                                Binding="{Binding Source={x:Reference checkBox}, Path=IsChecked}" Value="True">
+                                            <Setter Property="IsVisible"  Value="True"/>
+                                        </DataTrigger>
+                                        <DataTrigger TargetType="Label"
+                                                Binding="{Binding Source={x:Reference checkBox}, Path=IsChecked}" Value="False">
+                                            <Setter Property="IsVisible"  Value="False"/>
+                                        </DataTrigger>
+                                    </Label.Triggers>
+                                </Label>
 
-                            <Entry x:Name="noteField" Text="{Binding Notes}" Placeholder="Notes..." MaxLength="250" Grid.Row="1"  Grid.Column="1"  WidthRequest="500" Completed="OnEntryCompleted"  BackgroundColor="{Binding Source={x:Static local:Strings.ColYowLGrey}}">
-                                <Entry.Triggers>
-                                    <DataTrigger TargetType="Entry"
-                                            Binding="{Binding Source={x:Reference checkBox}, Path=IsChecked}" Value="True">
-                                        <Setter Property="IsVisible"  Value="True"/>
-                                    </DataTrigger>
-                                    <DataTrigger TargetType="Entry"
-                                            Binding="{Binding Source={x:Reference checkBox}, Path=IsChecked}" Value="False">
-                                        <Setter Property="IsVisible"  Value="False"/>
-                                    </DataTrigger>
-                                </Entry.Triggers>
-                            </Entry>
+                                <Entry x:Name="noteField" Text="{Binding Notes}" Placeholder="Notes..." MaxLength="250"  VerticalOptions="CenterAndExpand" HorizontalOptions="FillAndExpand" Completed="OnEntryCompleted"  BackgroundColor="{Binding Source={x:Static local:Strings.ColYowLGrey}}">
+                                    <Entry.Triggers>
+                                        <DataTrigger TargetType="Entry"
+                                                Binding="{Binding Source={x:Reference checkBox}, Path=IsChecked}" Value="True">
+                                            <Setter Property="IsVisible"  Value="True"/>
+                                        </DataTrigger>
+                                        <DataTrigger TargetType="Entry"
+                                                Binding="{Binding Source={x:Reference checkBox}, Path=IsChecked}" Value="False">
+                                            <Setter Property="IsVisible"  Value="False"/>
+                                        </DataTrigger>
+                                    </Entry.Triggers>
+                                </Entry>
+                            </StackLayout>
                         </Grid>
                     </ViewCell>
                 </DataTemplate>
