--- a/WHMIS/App.xaml
+++ b/WHMIS/App.xaml
@@ -65,7 +65,10 @@
                 <Setter Property="FontSize" Value="50"/>
                 <Setter Property="FontAttributes" Value="Bold"/>
             </Style>
-
+            <Style x:Key="YOWCanadaLink" TargetType="Label" BasedOn="{StaticResource Title}">
+                <Setter Property="TextColor" Value="{Binding Source={x:Static local:Strings.ColYowLink}}"/>
+                <Setter Property="FontSize" Value="Small"/>
+            </Style>
             <Style x:Key="Header" TargetType="Label">
                 <Setter Property="TextColor" Value="{Binding Source={x:Static local:Strings.ColYowDarkGrey}}"/>
                 <Setter Property="FontFamily" Value="Verdana"/>
