--- a/WHMIS/Views/PocketGuide/_NoteEntryPage.xaml
+++ b/WHMIS/Views/PocketGuide/_NoteEntryPage.xaml
@@ -7,19 +7,22 @@
              BackgroundColor="{Binding Source={x:Static local:Strings.ColYowLBlue}}">
     <ContentPage.Content>
         <StackLayout Margin="20" Spacing="0" BackgroundColor="{Binding Source={x:Static local:Strings.ColYowLGrey}}">
-            <Editor Placeholder="Enter your note"
-                Text="{Binding Text}"
-                HeightRequest="100" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="{Binding Source={x:Static local:Strings.ColYowLGrey}}" />
             <Grid BackgroundColor="{Binding Source={x:Static local:Strings.ColYowLGrey}}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
                 <Button Text="Save" 
                     Clicked="OnSaveButtonClicked" />
                 <Button Grid.Column="1"
                     Text="Delete" 
                     Clicked="OnDeleteButtonClicked"/>
+                <Editor Placeholder="Enter your note"
+                Text="{Binding Text}"
+                HeightRequest="100" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="{Binding Source={x:Static local:Strings.ColYowLGrey}}" />
             </Grid>
         </StackLayout>
     </ContentPage.Content>
