--- a/WHMIS/Views/PocketGuide/_QuickLinksPage.xaml
+++ b/WHMIS/Views/PocketGuide/_QuickLinksPage.xaml
@@ -16,7 +16,7 @@
 
                     <Label Text="" FontSize="Large" Grid.Row="3" Grid.Column="0"/>
 
-                    <Button Text="GHS Symbols" Style="{StaticResource SubButton}" Clicked="Open_GHS"  Grid.Row="4" Grid.Column="0"/>
+                    <Button Text="WHMIS Symbols" Style="{StaticResource SubButton}" Clicked="Open_GHS"  Grid.Row="4" Grid.Column="0"/>
                     <Button Text="PPE Symbols" Style="{StaticResource SubButton}" Clicked="Open_PPE"  Grid.Row="5" Grid.Column="0"/>
                     <Button Text="SDS Example" Style="{StaticResource SubButton}" Clicked="Open_SDS"  Grid.Row="6" Grid.Column="0"/>
                 </Grid>
