--- a/WHMIS/Views/PocketGuide/_NoteEntryPage.xaml
+++ b/WHMIS/Views/PocketGuide/_NoteEntryPage.xaml
@@ -15,13 +15,14 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <Button Text="Save" 
+                <Button Grid.Column="0" Grid.Row="0"
+                    Text="Save" 
                     Clicked="OnSaveButtonClicked" />
-                <Button Grid.Column="1"
+                <Button Grid.Column="1" Grid.Row="0"
                     Text="Delete" 
                     Clicked="OnDeleteButtonClicked"/>
                 <Editor Placeholder="Enter your note"
-                Text="{Binding Text}"
+                Text="{Binding Text}"  Grid.ColumnSpan="2" Grid.Row="1"
                 HeightRequest="100" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="{Binding Source={x:Static local:Strings.ColYowLGrey}}" />
             </Grid>
         </StackLayout>
