--- a/WHMIS/Views/PocketGuide/_NoteEntryPage.xaml
+++ b/WHMIS/Views/PocketGuide/_NoteEntryPage.xaml
@@ -14,6 +14,7 @@
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Button Grid.Column="0" Grid.Row="0"
                     Text="Save" 
@@ -21,10 +22,11 @@
                 <Button Grid.Column="1" Grid.Row="0"
                     Text="Delete" 
                     Clicked="OnDeleteButtonClicked"/>
-                <Editor Placeholder="Enter your note"
+            </Grid>
+            <Editor Placeholder="Enter your note..."
                 Text="{Binding Text}"  Grid.ColumnSpan="2" Grid.Row="1"
                 HeightRequest="100" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="{Binding Source={x:Static local:Strings.ColYowLGrey}}" />
-            </Grid>
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
